--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,1 +1,1 @@
-<div style='display: none'></div><a rel="me" href="https://infosec.exchange/@stulle">Mastodon</a></div>
+<div style='display: none'><a rel="me" href="https://infosec.exchange/@stulle">Mastodon</a></div>
